--- a/practice_3/index.html
+++ b/practice_3/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div class="page">
-        <div class="header">
+        
             <div class="header_main"><h1>Макс Коротков</h1></div>
+            <div class="main_image"></div>
             <div class='subheader'><h2>Another homework</h2></div>
-        </div>
+        
         <div class="textblock">
             <h2>Связь между талантом и амбициями</h2>
             <p>В фильме «Слава» молодой человек прославился как исполнитель бродвейской пьесы. Он на пороге славы, но, похоже, не знает, как туда добраться. Он изо всех сил пытается понять, что значит быть звездой. В конце концов, он понимает, что у него есть талант и амбиции, но он должен эффективно использовать оба дара, чтобы достичь своей цели. Талант и амбиции тесно переплетены – и людям важно это понимать.</p>
